--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3-node": "^1.1.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "hoek": "^4.2.1",
     "jade": "~1.11.0",
     "moment": "^2.22.2",
     "morgan": "~1.6.1",
